--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 .gradle
-.idea
 .DS_Store
 HelloWorld/app/build/intermediates/
 HelloWorld/app/build/generated/
 HelloWorld/app/build/tmp/
+HelloWorld/app/build/outputs/logs/
+*.iml
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+/captures
+.externalNativeBuild
+.cxx
