--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@ HelloWorld/app/build/intermediates/
 HelloWorld/app/build/generated/
 HelloWorld/app/build/tmp/
 HelloWorld/app/build/outputs/logs/
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/captures
+HelloWorld/local.properties
+HelloWorld/.idea/caches
+HelloWorld/.idea/libraries
+HelloWorld/.idea/modules.xml
+HelloWorld/.idea/workspace.xml
+HelloWorld/.idea/navEditor.xml
+HelloWorld/.idea/assetWizardSettings.xml
+HelloWorld/captures
 .externalNativeBuild
 .cxx
